# rapidsnark

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  build_lib.sh  build_tbb.sh  make_demo.sh  make_test.sh  make_x86.sh  package-lock.json  vcpkg.json
.github/workflows/: build.yml
src/: #fullprover.cpp#  #prover.h#  #random_generator.hpp#  .#fullprover.cpp  .#prover.h  CMakeLists.txt  alt_bn128.cpp  alt_bn128.hpp  binfile_utils.cpp  binfile_utils.hpp  curve.hpp  exp.hpp  f2field.hpp  fft.hpp  fileloader.cpp  fileloader.hpp  fullprover.cpp  fullprover.hpp  groth16.cpp  groth16.hpp  logger.cpp  logger.hpp  logging.hpp  main.cpp  main_proofserver.cpp  main_prover.cpp  misc.cpp  misc.hpp  multiexp.hpp  naf.hpp  prover.cpp  prover.h  proverapi.cpp  proverapi.hpp  random_generator.hpp  spinlock.hpp  splitparstr.hpp  test_prover.cpp  wtns_utils.cpp  wtns_utils.hpp  (+2 more)
